# solana_anchor_lens

./: Cargo.toml  LICENSE  README.md
anchor-lens/: Cargo.toml
anchor-lens/examples/: account.rs  transaction.rs
anchor-lens/src/deserialize/: field.rs  instruction.rs  mod.rs
anchor-lens/src/fetch_idl/: discriminators.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/interface/: mod.rs
