[package]
name = "solana-anchor-lens"
authors = ["Eric Brightfield"]
version = "0.1.0"
edition = "2021"

[[example]]
name = "account"
[[example]]
name = "transaction"

[dependencies]
anchor-syn = { version = "0.25.0", features = ["idl"] }
anchor-lang = { version = "0.25.0" }
anyhow = "1.0.66"
serde_json = { version  = "1.0.88", features = ["preserve_order"] }
serde = "1.0.148"
borsh = "0.9.3"
solana-client = "1.10.29"
solana-program = "1.10.29"
solana-sdk = "1.10.29"
solana-account-decoder = "1.10.29"
solana-transaction-status = "1.10.29"
flate2 = "1.0.24"
base64 = "0.20.0-alpha.1"
bincode = "2.0.0-rc.2"
