[package]
name = "anchor-lens-cli"
authors = ["Eric Brightfield"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "anchor-lens"
path = "src/main.rs"

[dependencies]
solana-anchor-lens = { path = "../anchor-lens" }
jungle-fi-cli-utils = { git = "https://github.com/Jungle-Finance/jungle-fi-cli-utils.git" }
clap = { version = "3.2.23", features = ["derive"] }
anyhow = "1.0.66"
solana-client = "1.10.29"
solana-sdk = "1.10.29"
serde_json = "1.0.89"
